[package]
name = "auth0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = "3.2.15"
reqwest = "0.11.11"
serde = { version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
spinners = "4.1.0"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
